deploy/gitops/apps/stream-analytics-system/stream-analytics-server/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stream-analytics-server
  namespace: stream-analytics-system
  labels:
    app.kubernetes.io/name: stream-analytics-server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: stream-analytics
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app: stream-analytics-server
  ports:
    - port: 80
      name: service
      targetPort: service
      protocol: TCP
